--- a/miniprogram/pages/recruiter/recruiter.wxss
+++ b/miniprogram/pages/recruiter/recruiter.wxss
@@ -97,6 +97,7 @@ scroll-view {
 }
 
 .filter-btn {
+    position: relative;
     display: flex;
     align-items: center;
     padding: 5px 10px;
@@ -129,7 +130,15 @@ scroll-view {
     font-size: 16px;
     color: #999;
 }
-
+.filter-indicator {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #ff4d4f;
+}
 /* 筛选面板 */
 .filter-panel {
     position: fixed;
