--- a/miniprogram/pages/admin/jobIndex/jobIndex.wxml
+++ b/miniprogram/pages/admin/jobIndex/jobIndex.wxml
@@ -1,24 +1,24 @@
 <!--pages/admin/jobIndex/jobIndex.wxml-->
 <view class="container">
-    <view class="empty-status" wx:if="{{tabs.length === 0 }}">暂无需要审核的招聘信息</view>
+    <view class="empty-status" wx:if="{{jobLists.length === 0 }}">暂无需要审核的招聘信息</view>
     <view class="list-box" wx:else>
         <view class="list-item" wx:for="{{jobLists}}" wx:key="index">
-            <view class="list-item child" wx:for="{{item}}" wx:key="index">
+            <!-- <view class="list-item child" wx:for="{{item}}" wx:key="index"> -->
                 <view class="title-box" bind:tap="viewInfo" data-id="{{item.id}}">
                     <view class="title">
                         {{item.title === '水手水手' ? '水手' : item.title}}
                         <text class="status status-{{item.status}}">{{status[item.status]}}</text>
                     </view>
-                    <view class="tools">
+                    <!-- <view class="tools">
                         <text class="edit-status">查看详情</text>
-                    </view>
+                    </view> -->
                 </view>
                 <view class="item">
                     <text>工资:{{item.salary}}{{item.totalSalary}}元 </text>
                     <text> 路线:{{item.route}} </text>
                     <text> 日期:{{item.date}}</text>
                 </view>
-            </view>
+            <!-- </view> -->
         </view>
     </view>
     <taBbar activeIndex="{{0}}" />
